# archives

2024/ajax-samples/: .gitignore
2024/ajax-samples/client-html/: post-file.html
2024/ajax-samples/client-requestpy/: post_file.py  sample.txt
2024/ajax-samples/server-express/: README.md  package.json  (+1 more)
2024/amplify-cdk/: .eslintignore  .eslintrc.js  .gitignore  .graphqlconfig.yml  cdk.json  package-lock.json  package.json  tsconfig.json
2024/amplify-react/: .graphqlconfig.yml  package-lock.json  package.json
2024/apollo-client-app/: codegen.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
2024/apollo-server-app/: .eslintrc.js  .gitignore  codegen.ts  jest.config.ts  package-lock.json  package.json  tsconfig.json
2024/fastapi-proj/: .env  form.json  main.py  setup.cfg  test_main.py
2024/jmespath/: jest.config.ts  package-lock.json  package.json
2024/mdn-express-locallibrary/: README.md
2024/mkdocs-proj/: mkdocs.yml
2024/prisma-express/: README.md  package-lock.json  package.json
2024/react-mui/: .eslintrc.cjs  .prettierrc.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
2024/recoil-app/: .eslintrc.cjs  package-lock.json  package.json
2024/redux-app/: package-lock.json  package.json
2024/rust-proj/aws-sam-rust/rust_app/: Cargo.toml
2024/rust-proj/aws-sam-rust/rust_app/src/: lib.rs  main.rs  test.rs
2024/rust-proj/aws-sam-rust/rust_app/tests/: event.json
2024/rust-proj/pyo3-example/: Cargo.toml  main.py  pyproject.toml
2024/rust-proj/pyo3-example/src/: lib.rs
2024/sam-helloworld-tsc/: jest.config.ts
(+1436 files in other folders)
