[package]
name = "pyo3-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_example"
crate-type = ["cdylib"]

[dependencies]
c2pa = { version = "0.28.4", features = ["file_io"] }
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }
serde_json = "1.0.108"
