[package]
name = "rust_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.12.1"
aws-config = "1.0.3"
aws-sdk-s3 = "1.7.0"
c2pa = { version = "0.28.4", features = ["file_io"] }
http = "0.2.11"
lambda_runtime = "0.8.3"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
